--- a/code_alongs/L06_functions.ipynb
+++ b/code_alongs/L06_functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions\n"
+    "## Funktioner\n"
    ]
   },
   {
@@ -17,12 +17,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vi har stött på många funktioner tidigare. Ett exempel är print()-funktionen"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "print('Ali')       # print är en funktion, som skriver ut sitt argument"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ett annat exempel är round()"
    ]
   },
   {
@@ -40,14 +54,9 @@
    "source": [
     "En funktion har det allmänna utseendet\n",
     "\n",
-    "$ funktionsnamn(argument_1, argument_2, ...) $"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "för print här "
+    "$ funktionsnamn(argument_1, argument_2, ...) $\n",
+    "\n",
+    "funktioner kan alltså ha ett, eller flera, argument."
    ]
   },
   {
@@ -56,46 +65,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# i vårt exempel nedan är print funktionsnamnet, och 'ali' dess enda argument\n",
+    "\n",
     "print('ali')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "print funktionsnamnet, och ali dess argument"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "nedan är round funktionsnamnet, och både 10.82381283 samt 2 dess argument.\n",
-    "\n",
-    "OBS, MYCKET VIKTIGT ATT ORDNING PÅ ARGUMENT ÄR RÄTT"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "round(10.82381283, 2)"
+    "# nedan är round funktionsnamnet, 10.82381 första argumentet & 2 andra argumentet \n",
+    "\n",
+    "round(10.82381, 2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vi kan nu bygga våra egna funktioner!"
+    "Notera att det är mycket viktigt i vilken ordning du anger argumenten! Testa byta ordning på argumenten i round()-funktionen ovan, och se vad som händer."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Anledningen till varför vi skulle göra det, är för att vi inte vill upprepa massa kod hela tiden"
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vi kan bygga våra egna funktioner!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anledningen till varför vi skulle göra det, är för att vi vill kunna använda vissa kodsnuttat flera gånger, vid flera olika tillfällen, och samtidigt inte behöva skriva om samma kod hela tiden"
    ]
   },
   {
@@ -119,7 +130,16 @@
    "outputs": [],
    "source": [
     "# varje gång vi vill att python ska utföra koden som ligger under greeting, kallar vi på den precis som vanligt som de andra funktionerna vi är vana vid\n",
+    "# vi använder namnet som vi gav den när vi definierade funktionen, i detta fall är namnet greeting\n",
+    "\n",
     "greeting()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___"
    ]
   },
   {
@@ -133,21 +153,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vi vill skapa en funktion som adderar två tal"
+    "Låt oss nu anta att vi vill skapa en funktion som adderar två tal, och att användaren ska ge oss dessa två tal"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vår funktion förväntar sig nu två stycken argument"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Python kommer att assigna variablen number_1 samt number_2 till argumenten vi ger funktionen"
+    "För att visa Python att vi vill att funktionen ska acceptera två argument, anger vi det helt enkelt när vi definierar funktionen"
    ]
   },
   {
@@ -157,7 +170,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def adding_numbers(number_1, number_2):             \n",
+    "def adding_numbers(number_1, number_2):            # notera att vi här visar att funktionen adding_numbers ska ta emot två argument             \n",
     "\n",
     "    print(f'number_1 = {number_1}')\n",
     "    print(f'number_2 = {number_2}')\n",
@@ -173,6 +186,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# när vi kallar på funktionen MÅSTE vi således ge den två argument. Annars får vi error\n",
+    "\n",
     "adding_numbers(5, 10)"
    ]
   },
@@ -180,7 +195,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vi vill skapa en funktion som subtraherar tal"
+    "Lägg ovan märke till att Python assignade \n",
+    "\n",
+    "* variabeln number_1 till det första argumentet vi gav funktionen när vi kallade på den, i detta fall 5\n",
+    "* variabeln number_2 till den andra argumentet vi gav funktionen när vi kallade på den, i detta fall 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ordningen av argument"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "För att förstå varför det är viktigt med ordningen vi anger variabler, låt oss skapa en funktion som istället subtraherar två tal"
    ]
   },
   {
@@ -205,6 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# I detta fall assignar Python number_1 = 5, och number_2 = 10\n",
+    "\n",
     "subtracting_numbers(5, 10)"
    ]
   },
@@ -214,6 +255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# men notera nu att number_1 = 10, och number_2 = 5\n",
+    "\n",
     "subtracting_numbers(10, 5)"
    ]
   },
@@ -221,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ORDNINGEN AV ARGUMENTEN ÄR SÅLEDES VANLIGTVIS VÄLDIGT VIKTIG"
+    "**Ordningen som argument anges är således mycket viktigt**"
    ]
   },
   {
@@ -242,31 +285,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "exempelvis print kan ta flera argument, ett av de vi sett är end. Den har default value '\\n'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ali\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('ali') # om vi inte explicit anger ett värde för end, kommer Python använda sitt default värde"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Vi kan skriva över default value genom att direkt ange argumentet "
+    "Som vi sett tidigare har vissa funktioner default values.\n",
+    "\n",
+    "Print har ett default value för argumentet end. Det värdet är end='\\n', dvs en ny rad.\n",
+    "\n",
+    "Om inte annat anges, kommer print att skriva ut argumentet som du anger - och därefter avsluta med en ny rad"
    ]
   },
   {
@@ -275,24 +298,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('ali', end = '***')"
+    "print('ali') # om vi inte explicit anger ett värde för end, kommer print skriva ut en ny rad efter den skrivit ut 'ali'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "När vi definierar en funktion kan vi ge ett av argumenten default value genom att direkt ange ett värde"
+    "Vi kan skriva över default värdet för end genom att direkt ange ett annat värde för den"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('ali', end = '***')         # nu kommer inte print att avsluta utskriften med en ny rad, utan istället med ***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "\n",
+    "## Sätt egna default values i våra funktioner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "När vi definierar en funktion kan vi argumenten default values genom att direkt ange ett värde för respektive argument, när vi definierar funktionen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# nu har argumentet name default value 'friend'\n",
+    "# nu har argumentet name default värdet 'friend'\n",
     "\n",
     "def say_hello(name='friend'):\n",
     "\n",
@@ -301,39 +349,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "friend\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# vi behöver således inte ange ett värde för argumentet name när vi kallar på funktionen, eftersom att den då istället kommer använda sitt default value\n",
+    "# vi behöver således inte ange ett värde för argumentet name när vi kallar på funktionen, \n",
+    "# eftersom att den då istället kommer använda sitt default value\n",
     "\n",
     "say_hello()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ali\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# vi kan direkt byta värdet på argumentet name genom att explicit ange ett värde när vi kallar på funktionen, då kommer default värde att skrivas över med det \n",
-    "# värdet som vi anger. I detta fall skriver vi över default värdet 'friend' med 'ali'\n",
+    "# vi kan direkt byta värdet på argumentet name genom att explicit ange ett värde när vi kallar på funktionen, \n",
+    "# då kommer default värde att skrivas över med det  värdet som vi anger. I detta fall skriver vi över default värdet 'friend' med 'ali'\n",
     "\n",
     "say_hello(name='ali')"
    ]
@@ -342,12 +375,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vi kan definiera funkioner med argument med & utan default values"
+    "## Vi kan definiera funkioner med både argument med & utan default values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,20 +399,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x=2\n",
-      "y=3\n",
-      "z=10\n",
-      "60\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# eftersom att z har ett default value, behöver vi inte ange något värde för den\n",
     "\n",
@@ -388,20 +410,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x=2\n",
-      "y=3\n",
-      "z=20\n",
-      "120\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# vi kan, om vi vill, givetvis ändra på default värdet på z genom att direkt ange ett värde för z när vi kallar på funktionen\n",
     "\n",
@@ -435,6 +446,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python kommer nedan att försöka matcha de argument du ger till funktionen, till de argument som funktionen förväntar sig"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -447,9 +465,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Som vi ser så gör Python det i tur-och-ordning. Det första argumentet vi gav funktionen när vi kallade på den (2) assignade Python till det\n",
+    "första argumentet den förväntar sig (x). Sen fortsatte den i satta vårt andra angivna argument (3) till det andra argumenten den förväntar sig (y)\n",
+    "\n",
+    "Att ange argument till en funktion på det här sättet går bra! Men man måste tänka till lite..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "___\n",
     "\n",
-    "**OBS** viktigt att alla variabler utan argument, står föra de med argument"
+    "## Blanda ej ordningen på explicit och implicit angivna argument \n",
+    "\n",
+    "\n",
+    "För att inte förvirra Python och skapa error är det viktigt att vi inte gör som nedan, där vi explicit angett z=10, och sedan gett två implicita (ej namngivna)argument ytterligare.\n",
+    "\n",
+    "Python blir förvirrad och förstår inte hur den ska hantera detta fall (den vet inte vilket argument den ska assigna till x, och vilken till y)"
    ]
   },
   {
@@ -465,9 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "När ni kallar på en funktion, är det superviktigt att argumenten som inte har defualt values anges **före** de som har default values\n",
-    "\n",
-    "om inte ni explicit anger vilka variabler som ska ha vilka värden"
+    "När ni kallar på en funktion, är det därför superviktigt att argumenten som anges explicit görs efter de som implicit anges"
    ]
   },
   {
@@ -476,7 +507,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multiplikation(z=30, x=10, y=20)"
+    "multiplikation(10, 20, z=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nu förstod Python hur den ska assigna argumenten!"
    ]
   },
   {
@@ -485,16 +523,16 @@
    "source": [
     "___\n",
     "\n",
-    "Return"
+    "## Return"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ni kan assigna OUTPUTEN från funktioner till variabler genom att lägga till en return i slutet av er funktion\n",
+    "Ofta vill man att våra funktioner också ska ge oss en output, som vi kan ta och bearbeta vidare på något sätt. \n",
     "\n",
-    "Det ni returnar är det som variabeln kommer bli assignad"
+    "För att visa Python vad ni vill att funktionen ska 'returna' som output, gör ni det med en return-markering i slutet av funktionen"
    ]
   },
   {
@@ -507,7 +545,16 @@
     "\n",
     "    area = bas*höjd/2\n",
     "\n",
-    "    return area"
+    "    return area                          # vår funktion returnerar värdet av area här"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vi som användare kan sedan 'fånga upp' outputen från funktionen (det som funktionen returnar) på detta vis\n",
+    "\n",
+    "Vi assignar helt enkelt en variabel till att anta värdet som returneras av funktionen"
    ]
   },
   {
@@ -516,8 +563,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_answer = calculate_area(10, 2)        # här kommer my_answer bli assignad värdet för area\n",
+    "my_answer = calculate_area(10, 4)        # här kommer my_answer bli assignad värdet för area som funktionen precis beräknade\n",
+    "\n",
     "print(my_answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tänk på att ni bestämmer själva vad som funktionen returnerar!"
    ]
   },
   {
@@ -530,7 +585,7 @@
     "\n",
     "    area = bas*höjd/2\n",
     "\n",
-    "    return 50000000"
+    "    return 50000000                    # i detta fall returnerar vi 50000000, som inte har någonting att göra med arean som vi beräknade"
    ]
   },
   {
@@ -539,7 +594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_answer = calculate_area(10, 2)\n",
+    "my_answer = calculate_area(10, 2)      # vad tror du att my_answer blir assignad till här?\n",
     "\n",
     "print(my_answer)"
    ]
@@ -550,7 +605,7 @@
    "source": [
     "___\n",
     "\n",
-    "*args"
+    "## *args"
    ]
   },
   {
@@ -585,15 +640,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "calculate_area(10, 2)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -604,18 +650,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alert:\n",
+    "## VIKTIG DETALJ\n",
     "\n",
     "Var noga med att inte assigna bort era funktioner!!!!"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sum = 10"
+    "Vi vet att ex. print är en funktion, men om ni assignar print till något annat, som ex:"
    ]
   },
   {
@@ -624,7 +668,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum([1,2,3])"
+    "print = 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "kommer inte print längre att fungera som funktion, eftersom att ni nu assignat den till ett något annat (en integer i detta fall)"
    ]
   },
   {
@@ -632,7 +683,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "type(print)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vi får således error när vi försöker använda vår print-funktion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('ali')"
+   ]
   }
  ],
  "metadata": {
