--- a/exercises/solutions/01_if_statement_solutions.ipynb
+++ b/exercises/solutions/01_if_statement_solutions.ipynb
@@ -295,11 +295,11 @@
       "source": [
         "user_number = int(input('Ange ett tal: '))\n",
         "\n",
-        "if user_number % 5 == 0 and user_number % 2:\n",
+        "if user_number % 5 == 0 and user_number % 2 == 0:\n",
         "\n",
         "    print(f'{user_number} is both divisible by 5 and even!')\n",
         "\n",
-        "elif user_number % 5 == 0 and user_number % 2:\n",
+        "elif user_number % 5 == 0 and user_number % 2 == 1:\n",
         "\n",
         "    print(f'{user_number} is divisible by 5, but not even.')\n",
         "\n",
