--- a/exercises/solutions/06_functions_solutions.ipynb
+++ b/exercises/solutions/06_functions_solutions.ipynb
@@ -265,7 +265,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Alternativt kan vi skapa ovan listor att plotta med **list comprehensions**"
+        "Alternativt kan vi skapa ovan listor med **list comprehensions** istället"
       ]
     },
     {
@@ -333,6 +333,79 @@
         "```\n",
         "\n",
         "</details>\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Lösning 1**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 68,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Marcus\n",
+            "Ida Anderson\n",
+            "Olof   Olofsson\n"
+          ]
+        }
+      ],
+      "source": [
+        "def name_cleaner(name):\n",
+        "\n",
+        "    name_without_blank_spaces = name.strip()\n",
+        "    name_titled = name_without_blank_spaces.title()\n",
+        "\n",
+        "    print(name_titled)\n",
+        "\n",
+        "namelist = [\"  MaRcUs \", \" iDA aNderSon\", \"             OLOF   Olofsson            \"  ]\n",
+        "\n",
+        "for name in namelist:\n",
+        "\n",
+        "    name_cleaner(name)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Lösning 2, med chaining**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 70,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Marcus\n",
+            "Ida Anderson\n",
+            "Olof Olofsson\n"
+          ]
+        }
+      ],
+      "source": [
+        "def name_cleaner(name):\n",
+        "\n",
+        "    cleaned_name = name.strip().title()\n",
+        "\n",
+        "    print(cleaned_name)\n",
+        "\n",
+        "namelist = [\"  MaRcUs \", \" iDA aNderSon\", \"             OLOF Olofsson            \"  ]\n",
+        "\n",
+        "for name in namelist:\n",
+        "\n",
+        "    name_cleaner(name)"
       ]
     },
     {
