--- a/exercises/07_exception_exercise.ipynb
+++ b/exercises/07_exception_exercise.ipynb
@@ -43,10 +43,10 @@
         "Find the errors in this code to compute the distance between the point $(x,y)$ and the origin in a cartesian coordinate system.\n",
         "\n",
         "```python\n",
-        "impor numpy as np\n",
+        "impor math\n",
         "\n",
         "def distance(x,y)\n",
-        "    reurn np.sqrt(x+y)\n",
+        "    reurn math.sqrt(x+y)\n",
         "\n",
         "print(distance([0.5, 0.5]))\n",
         "\n",
