--- a/code_alongs/L07_error_handling.ipynb
+++ b/code_alongs/L07_error_handling.ipynb
@@ -16,21 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'prin' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Leyla\\Desktop\\Quantum State\\IT högskolan\\Courses\\Python\\code_alongs\\L07_error_handling.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L07_error_handling.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# python har ingen aning om vad prin är, och du får därför ett error (NameError i detta fall)\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L07_error_handling.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m prin(\u001b[39m'\u001b[39m\u001b[39mhej\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'prin' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# python har ingen aning om vad prin är, och du får därför ett error (NameError i detta fall)\n",
     "prin('hej')"
@@ -38,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +37,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "expected ':' (3890760579.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[4], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    for name in names\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "names = ['Ali', 'Amir', 'Rozann']\n",
     "\n",
@@ -82,17 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Arean av en circle med radien 10 är 62.83185307179586\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -126,21 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'tio'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Leyla\\Desktop\\Quantum State\\IT högskolan\\Courses\\Python\\code_alongs\\L07_error_handling.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L07_error_handling.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m number_1 \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(\u001b[39minput\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mAnge din första siffra: \u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L07_error_handling.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m number_2 \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(\u001b[39minput\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mAnge din andra siffra: \u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L07_error_handling.ipynb#X35sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m produkt \u001b[39m=\u001b[39m number_1\u001b[39m*\u001b[39mnumber_2\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'tio'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number_1 = float(input('Ange din första siffra: '))\n",
     "number_2 = float(input('Ange din andra siffra: '))\n",
@@ -159,18 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.0\n",
-      "Du har angett minst en ogiltiga siffor\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "\n",
@@ -197,21 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.0\n",
-      "Vänligen ange giltiga siffror, antingen heltal eller decimaltal\n",
-      "5.0\n",
-      "10.0\n",
-      "Tack! din produkt är 50.0 :)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "\n",
@@ -244,25 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "could not convert string to float: 'fem'\n",
-      "Vänligen ange giltiga siffror, antingen heltal eller decimaltal\n",
-      "could not convert string to float: ''\n",
-      "Vänligen ange giltiga siffror, antingen heltal eller decimaltal\n",
-      "could not convert string to float: 'tio'\n",
-      "Vänligen ange giltiga siffror, antingen heltal eller decimaltal\n",
-      "20.0\n",
-      "55.0\n",
-      "Tack! din produkt är 1100.0 :)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "\n",
@@ -285,6 +207,58 @@
     "\n",
     "        print('Vänligen ange giltiga siffror, antingen heltal eller decimaltal')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Raise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vi vill här att användaren ska ange ett värde mellan 0 och 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "\n",
+    "    try:\n",
+    "        \n",
+    "        value = float(input('Ange ett värde mellan 0-100'))\n",
+    "\n",
+    "        if 0 > value or value > 100:\n",
+    "            print('Du har angett ett värde utanför giltigt intervall.')\n",
+    "            raise ValueError\n",
+    "\n",
+    "        break\n",
+    "\n",
+    "    except:\n",
+    "\n",
+    "        print('försök igen')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
