--- a/code_alongs/L07_error_handling.ipynb
+++ b/code_alongs/L07_error_handling.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Syntax errors - när du gör något som inte är tillåtet av Python"
+    "Progremmatiska errors - när du gör något som inte är tillåtet av Python"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# här får vi syntax error, eftersom att loopen inte är konstruerad enligt förväntan"
+    "# här får vi SyntaxError, eftersom att loopen inte är konstruerad enligt förväntan"
    ]
   },
   {
