--- a/exercises/solutions/06_functions_solutions.ipynb
+++ b/exercises/solutions/06_functions_solutions.ipynb
@@ -429,6 +429,72 @@
         "\n",
         "Now let the user input a value, and use the function to calculate the change."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def currency_divider(value):\n",
+        "\n",
+        "    notes = [1000, 200, 50, 10, 5, 2]\n",
+        "\n",
+        "    number_of_each_note = []                                   # vi skapar här en lista där vi ska spara antalet av varje valör\n",
+        "\n",
+        "    for note in notes:                              \n",
+        "\n",
+        "        remainder = value % note\n",
+        "        divisible_by_note = value - remainder                  # detta är nu tal delbart med det aktuella värdet av note\n",
+        "        multiplies_of_note = divisible_by_note/note            # räkna ut hur många hela sedlar av nuvarande värdet av note, som får plats i värdet av value\n",
+        "        number_of_each_note.append(multiplies_of_note)         # lägg till antalet hela sedlar i listan number_of_each_note\n",
+        "\n",
+        "        value = remainder                                      # skriv nu över värdet value till remainder, vilket är det återstående som vi vill fortsätta\n",
+        "                                                               # göra beräkningar för\n",
+        "\n",
+        "    for i, j in zip(notes, number_of_each_note):\n",
+        "\n",
+        "        print(f'{j} st av valören {i}')\n",
+        "        "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1.0 st av valören 1000\n",
+            "1.0 st av valören 200\n",
+            "0.0 st av valören 50\n",
+            "2.0 st av valören 10\n",
+            "1.0 st av valören 5\n",
+            "0.0 st av valören 2\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Testa\n",
+        "\n",
+        "currency_divider(1225)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Som ni ser ovan så ges antalet av float-nummer, snarare än integers. Om man vill kan man gå tillbaks in i koden och åtgära det."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -451,7 +517,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.8.13"
     },
     "vscode": {
       "interpreter": {
