--- a/exercises/solutions/06_functions_solutions.ipynb
+++ b/exercises/solutions/06_functions_solutions.ipynb
@@ -344,19 +344,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Marcus\n",
-            "Ida Anderson\n",
-            "Olof   Olofsson\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def name_cleaner(name):\n",
         "\n",
@@ -381,19 +371,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Marcus\n",
-            "Ida Anderson\n",
-            "Olof Olofsson\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def name_cleaner(name):\n",
         "\n",
@@ -432,69 +412,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def currency_divider(value):\n",
-        "\n",
-        "    notes = [1000, 200, 50, 10, 5, 2]\n",
+        "def currency_divider(value, notes):\n",
         "\n",
         "    number_of_each_note = []                                   # vi skapar här en lista där vi ska spara antalet av varje valör\n",
         "\n",
         "    for note in notes:                              \n",
         "\n",
         "        remainder = value % note\n",
-        "        divisible_by_note = value - remainder                  # detta är nu tal delbart med det aktuella värdet av note\n",
+        "        divisible_by_note = value - remainder                  # detta är nu ett tal som är delbart med det aktuella värdet av note\n",
         "        multiplies_of_note = divisible_by_note/note            # räkna ut hur många hela sedlar av nuvarande värdet av note, som får plats i värdet av value\n",
         "        number_of_each_note.append(multiplies_of_note)         # lägg till antalet hela sedlar i listan number_of_each_note\n",
         "\n",
         "        value = remainder                                      # skriv nu över värdet value till remainder, vilket är det återstående som vi vill fortsätta\n",
         "                                                               # göra beräkningar för\n",
         "\n",
-        "    for i, j in zip(notes, number_of_each_note):\n",
+        "    return number_of_each_note\n",
         "\n",
-        "        print(f'{j} st av valören {i}')\n",
+        "\n",
+        "\n",
+        "# TESTA FUNKTIONEN\n",
+        "\n",
+        "value = 1225                                                  # värdet vi vill dela upp i mindre valörer\n",
+        "notes = [1000, 200, 50, 10, 5, 2]                             # valörer som vi vill använda\n",
+        "\n",
+        "number_of_each_note = currency_divider(1225, notes)\n",
+        "\n",
+        "for i, j in zip(notes, number_of_each_note):\n",
+        "\n",
+        "    print(f'{j} st av valören {i}')\n",
         "        "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "1.0 st av valören 1000\n",
-            "1.0 st av valören 200\n",
-            "0.0 st av valören 50\n",
-            "2.0 st av valören 10\n",
-            "1.0 st av valören 5\n",
-            "0.0 st av valören 2\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Testa\n",
-        "\n",
-        "currency_divider(1225)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Som ni ser ovan så ges antalet av float-nummer, snarare än integers. Om man vill kan man gå tillbaks in i koden och åtgära det."
+        "Som ni ser ovan så ges antalet av float-nummer, när kanske integers är mer lämpligt. Om man vill kan man gå tillbaks in i koden och åtgära det."
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
