--- a/exercises/solutions/06_functions_solutions.ipynb
+++ b/exercises/solutions/06_functions_solutions.ipynb
@@ -436,8 +436,8 @@
         "\n",
         "# TESTA FUNKTIONEN\n",
         "\n",
-        "value = 1225                                                  # värdet vi vill dela upp i mindre valörer\n",
-        "notes = [1000, 200, 50, 10, 5, 2]                             # valörer som vi vill använda\n",
+        "value = 1225                                                      # värdet vi vill dela upp i mindre valörer\n",
+        "notes = [1000, 200, 50, 20, 10, 5, 2]                             # valörer som vi vill använda\n",
         "\n",
         "number_of_each_note = currency_divider(1225, notes)\n",
         "\n",
