--- a/exercises/08_file_handling_exercise.ipynb
+++ b/exercises/08_file_handling_exercise.ipynb
@@ -208,7 +208,7 @@
         "\n",
         "   -- full_quoteN\n",
         "\n",
-        "**All the quotes must be cleaned!* In other words, remove all junk space contained between the words.\n",
+        "**All the quotes must be cleaned! In other words, remove all junk space contained between the words.**\n",
         "\n",
         "<details>\n",
         "\n",
