--- a/exercises/solutions/08_file_handling_exercise.ipynb
+++ b/exercises/solutions/08_file_handling_exercise.ipynb
@@ -367,7 +367,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**Delmoment 4: sortera namnlistan i en ny liasta, och hitta rätt index för varje namn i poänglistan**"
+        "**Delmoment 4: sortera namnlistan i en ny lista, och hitta rätt index för varje namn i poänglistan**"
       ]
     },
     {
